--- a/css/main.css
+++ b/css/main.css
@@ -19,205 +19,95 @@
   background-color: royalblue;
 }
 
-.top-text {
+.movie-title {
+  margin: 0px auto 37px;
   text-align: center;
+  font-size: 80px;
   font-weight: 700;
-  font-size: 32px;
 }
 
-/* 슬라이더 부분 */
-/* .slider-section {
-  overflow: hidden;
-} */
+/* movie detail */
 
-#slider {
-  /* height: 768px; */
-  margin: 0 auto;
-  overflow: hidden;
-}
-
-.slide-inner {
+.movie-detail {
+  width: 1084px;
   display: flex;
-  transition: 1s ease-in-out;
-  height: 100%;
-  justify-content: center;
-}
-
-.slide {
-  background: rgba(255, 255, 255, 0.8);
-  border-radius: 60px;
-}
-
-.button-list {
-  text-align: center;
-}
-
-.slide-num {
   margin: 0 auto;
-  padding: 30px;
 }
 
-.slide-num .slide-img {
+.movie-detail .movie-poster {
   width: 453px;
   height: 640px;
-  background-color: royalblue;
   border-radius: 40px;
-  margin: 0 auto;
   overflow: hidden;
-  cursor: pointer;
 }
 
-.slide-img img {
+.movie-detail .movie-poster img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
-.slide-num .slide-info {
-  text-align: center;
-}
-.slide-info .title {
-  text-align: center;
-  margin-top: 34px;
-  font-size: 32px;
-  font-weight: 700;
-}
-.slide-info .rating {
-  margin: 10px auto 0;
-  font-size: 28px;
-  color: white;
+.movie-detail .movie-info {
+  margin-left: 50px;
+  width: 581px;
 }
 
-/* slide btn */
+.movie-detail .movie-info .popular,
+.movie-detail .movie-info .release,
+.movie-detail .movie-info .production {
+  /* display: flex; */
+  margin-bottom: 30px;
 
-.button-list {
-  position: relative;
+  /* height: 40px; */
 }
-.button-left {
-  position: absolute;
-  padding: 50px;
-  color: white;
-  border: 2px solid white;
-  top: 350px;
-  left: 100px;
-  border-radius: 100px;
-}
-.button-right {
-  position: absolute;
-  padding: 50px;
-  color: white;
-  border: 2px solid white;
-
-  top: 350px;
-  right: 100px;
-  border-radius: 100px;
+.movie-info p {
+  display: inline;
 }
 
-section.inner {
-  width: 1280px;
-  margin: 130px auto 130px;
-}
-
-/* filter - form */
-.filter-form {
-  display: flex;
-  margin-bottom: 60px;
-}
-
-.filter {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.filter .filter-name {
-  font-size: 32px;
-  font-weight: 700;
-}
-
-.filter .filter-select {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 30px;
-}
-
-.filter .filter-select div {
-  margin: 0 10px 0;
-  color: rgba(255, 255, 255, 0.8);
-  cursor: pointer;
-}
-
-.filter .filter-select div:hover {
-  color: white;
-}
-
-.filter-form .search-box {
-  margin-left: auto;
-}
-
-.filter-form .search-box .search-input {
-  width: 460px;
-  height: 60px;
-  border-radius: 30px;
-  border: none;
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 0 0 0 22px;
+.movie-detail .movie-info .category {
+  width: 120px;
   font-size: 24px;
-  font-weight: 400;
+  height: 35px;
 }
-
-.filter-form .search-box .search-input:focus {
-  outline: none;
-}
-
-.filter-form .search-box .search-btn {
-  width: 140px;
-  height: 60px;
-  border-radius: 30px;
-  border: none;
-  background-color: rgba(255, 255, 255, 0.8);
-  font-size: 26px;
-  font-weight: 400;
+.movie-detail .movie-info .value {
   margin-left: 30px;
+  font-size: 24px;
 }
 
-.filter-form .search-box .search-btn:hover {
-  background-color: royalblue;
+.movie-detail .movie-info .overview {
+  font-size: 24px;
 }
 
-/* Card Container */
-
-.card-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 290px));
-  gap: 40px;
-}
-.movie-card {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
+.movie-detail .movie-info .genre {
   margin-top: 30px;
-  overflow: hidden;
+  display: flex;
 }
 
-.movie-card .card-poster {
-  border-radius: 10px;
-  overflow: hidden;
+.movie-detail .movie-info .genre div {
+  padding: 12px 20px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 30px;
 }
 
-.card-poster img {
-  width: 100%;
+.tag-line {
+  margin: 76px 0;
+  text-align: center;
+}
+
+.tag-line .tag-line-text {
   margin: 0 auto;
-  object-fit: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+  font-size: 32px;
+  z-index: 9;
+  /* background: linear-gradient();
+   */
+  filter: opacity(0.7);
 }
 
-.movie-card .card-title {
-  margin-top: 30px;
-  font-size: 32px;
-  font-weight: 700;
+.money-info {
+  text-align: center;
 }
-.movie-card .card-rating {
-  margin-top: 10px;
-  font-size: 24px;
+.money-info .title {
+  font-size: 32px;
 }
