--- a/css/detail.css
+++ b/css/detail.css
@@ -2,8 +2,11 @@
   box-sizing: border-box;
   font-family: "sofia-pro", sans-serif;
   font-weight: 400;
-  background-color: black;
   color: white;
+}
+
+html {
+  background-color: black;
 }
 
 .header {
@@ -89,7 +92,17 @@
 
 .tag-line {
   margin: 76px 0;
+  font-size: 32px;
   text-align: center;
+  position: relative;
+}
+
+.tag-line p {
+  position: absolute;
+  z-index: 9;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .tag-line .tag-line-text {
@@ -97,17 +110,87 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding: 150px 0;
-  font-size: 32px;
-  z-index: 9;
+  height: 300px;
   /* background: linear-gradient();
    */
   filter: opacity(0.7);
 }
 
-.money-info {
-  text-align: center;
-}
+/* money info section  */
+
 .money-info .title {
+  text-align: center;
   font-size: 32px;
+  font-weight: 700;
+}
+
+.money-info .money-table {
+  margin: 0 auto;
+  width: 600px;
+  height: 120px;
+  font-size: 24px;
+}
+
+.money-info .money-table .category {
+  font-weight: 700;
+}
+
+/* comment */
+
+.comment {
+  margin: 0 auto;
+  margin-top: 62px;
+}
+
+.comment .title-area {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.comment .title {
+  font-size: 80px;
+}
+
+.comment .filters {
+  display: flex;
+}
+.comment .filters p {
+  margin-left: 30px;
+  color: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+}
+.comment .filters p:hover {
+  color: white;
+}
+
+.commnet-print {
+  margin: 0 auto;
+}
+
+.comment-print .comment-card {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  width: 1090px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid white;
+}
+
+.comment-print .comment-card .info {
+}
+
+.comment-print .comment-card .info .name {
+  font-size: 24px;
+  margin-bottom: 5px;
+}
+
+.comment-print .comment-card .info .gender {
+  font-size: 18px;
+}
+
+.comment-print .comment-card .print {
+  font-size: 24px;
+  margin-left: 30px;
+  width: 890px;
 }
