--- a/css/detail.css
+++ b/css/detail.css
@@ -85,6 +85,7 @@ html {
 }
 
 .movie-detail .movie-info .genre div {
+  margin-right: 20px;
   padding: 12px 20px;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 30px;
