영화 이미지에 호버 기능 구현 (#44)
기존에 img태그를 이용하여 상세페이지 이동기능을 구현했었는데 호버기능이
img태그에서는 지원되지않아서
home-to-detail.js에서 쿼리셀렉터 선택자를 이미지태그가 아닌 이미지태그를
감싸고 있는 div태그로 변경하였고 main.js에서 렌더링할때 img태그에
data-id값과 클래스속성값을 넣는 부분을 삭제하고 감싸고있는 div태그에
data-id값 할당.

기타: data를 전역변수로 썼기때문에 showData함수의 async await로 data를
fetch.js의 함수에서 받아오던  부분 삭제

--- a/css/index.css
+++ b/css/index.css
@@ -65,8 +65,30 @@
   margin: 0 auto;
   overflow: hidden;
   cursor: pointer;
+  position: relative;
 }
-
+.slide-img::before {
+  content: "상세 정보 보기";
+  color: black;
+  font-size: 30px;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: gray;
+  top: 0;
+  left: 100%;
+  transition: all 0.3s;
+  opacity: 0.5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-text-stroke: 2px black;
+  background-image: linear-gradient(0deg, black, #f9f7f1);
+  background-repeat: no-repeat;
+}
+.slide-img:hover::before {
+  transform: translateX(-100%);
+}
 .slide-img img {
   width: 100%;
   height: 100%;
@@ -89,9 +111,6 @@
 }
 
 /* slide btn */
-.movie-img {
-  cursor: pointer;
-}
 
 .button-list {
   position: relative;
@@ -208,8 +227,31 @@ section.inner {
 .movie-card .card-poster {
   border-radius: 10px;
   overflow: hidden;
+  cursor: pointer;
+  position: relative;
 }
-
+.card-poster::before {
+  content: "상세 정보 보기";
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: gray;
+  top: 0;
+  left: 100%;
+  transition: all 0.3s;
+  opacity: 0.5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-text-stroke: 2px black;
+  background-image: linear-gradient(0deg, black, #f9f7f1);
+  background-repeat: no-repeat;
+}
+.card-poster:hover::before {
+  transform: translateX(-100%);
+}
 .card-poster img {
   width: 100%;
   margin: 0 auto;
