--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,8 @@
   font-weight: 400;
   /* background-color: black; */
   color: white;
+  word-wrap: break-word;
+  word-break: keep-all;
 }
 
 body {
@@ -69,6 +71,7 @@ body {
   overflow: hidden;
   position: relative;
 }
+
 /* .slide-img::before {
   content: "상세 정보 보기";
   color: black;
@@ -100,12 +103,14 @@ body {
 .slide-num .slide-info {
   text-align: center;
 }
+
 .slide-info .title {
   text-align: center;
   margin-top: 34px;
   font-size: 32px;
   font-weight: 700;
 }
+
 .slide-info .rating {
   margin: 10px auto 0;
   font-size: 28px;
@@ -117,6 +122,7 @@ body {
 .button-list {
   position: relative;
 }
+
 .button-left {
   position: absolute;
   padding: 50px;
@@ -126,6 +132,7 @@ body {
   left: 100px;
   border-radius: 100px;
 }
+
 .button-right {
   position: absolute;
   padding: 50px;
@@ -218,6 +225,7 @@ section.inner {
   grid-template-columns: repeat(auto-fit, minmax(200px, 290px));
   gap: 40px;
 }
+
 .movie-card {
   display: flex;
   flex-direction: column;
@@ -261,14 +269,12 @@ section.inner {
   height: 80%;
   bottom: 0px;
   position: absolute;
-  background: linear-gradient(
-    to bottom,
-    rgba(20, 20, 20, 0) 10%,
-    rgba(20, 20, 20, 0.25) 25%,
-    rgba(20, 20, 20, 0.5) 50%,
-    rgba(20, 20, 20, 0.75) 75%,
-    rgba(20, 20, 20, 1) 100%
-  );
+  background: linear-gradient(to bottom,
+      rgba(20, 20, 20, 0) 10%,
+      rgba(20, 20, 20, 0.25) 25%,
+      rgba(20, 20, 20, 0.5) 50%,
+      rgba(20, 20, 20, 0.75) 75%,
+      rgba(20, 20, 20, 1) 100%);
   opacity: 0.8;
   display: none;
 }
@@ -290,6 +296,7 @@ section.inner {
   justify-content: center;
   align-items: center;
 }
+
 .like-btn:hover {
   transition: transform 0.1s linear;
   transform: translateY(-5px) translateX(-50%);
@@ -299,6 +306,7 @@ section.inner {
 .like-btn p {
   color: royalblue;
 }
+
 .like-btn .like-num {
   margin-left: 5px;
 }
@@ -326,6 +334,7 @@ section.inner {
   transform: translateY(-5px) translateX(-50%);
   filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.5));
 }
+
 .card-poster img {
   width: 100%;
   margin: 0 auto;
@@ -337,6 +346,7 @@ section.inner {
   font-size: 32px;
   font-weight: 700;
 }
+
 .movie-card .card-rating {
   margin-top: 10px;
   font-size: 24px;
