--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,8 @@
   font-weight: 400;
   /* background-color: black; */
   color: white;
+  word-wrap: break-word;
+  word-break: keep-all;
 }
 
 body {
@@ -67,9 +69,9 @@ body {
   border-radius: 40px;
   margin: 0 auto;
   overflow: hidden;
-  cursor: pointer;
   position: relative;
 }
+
 /* .slide-img::before {
   content: "상세 정보 보기";
   color: black;
@@ -101,12 +103,14 @@ body {
 .slide-num .slide-info {
   text-align: center;
 }
+
 .slide-info .title {
   text-align: center;
   margin-top: 34px;
   font-size: 32px;
   font-weight: 700;
 }
+
 .slide-info .rating {
   margin: 10px auto 0;
   font-size: 28px;
@@ -118,6 +122,7 @@ body {
 .button-list {
   position: relative;
 }
+
 .button-left {
   position: absolute;
   padding: 50px;
@@ -127,6 +132,7 @@ body {
   left: 100px;
   border-radius: 100px;
 }
+
 .button-right {
   position: absolute;
   padding: 50px;
@@ -219,6 +225,7 @@ section.inner {
   grid-template-columns: repeat(auto-fit, minmax(200px, 290px));
   gap: 40px;
 }
+
 .movie-card {
   display: flex;
   flex-direction: column;
@@ -291,6 +298,7 @@ section.inner {
   justify-content: center;
   align-items: center;
 }
+
 .like-btn:hover {
   transition: transform 0.1s linear;
   transform: translateY(-5px) translateX(-50%);
@@ -300,6 +308,7 @@ section.inner {
 .like-btn p {
   color: royalblue;
 }
+
 .like-btn .like-num {
   margin-left: 5px;
 }
@@ -311,7 +320,7 @@ section.inner {
   border-radius: 40px;
   width: 200px;
   height: 60px;
-  font-size: 24px;
+  font-size: 22px;
   background-color: royalblue;
   left: 50%;
   transform: translateX(-50%);
@@ -327,6 +336,7 @@ section.inner {
   transform: translateY(-5px) translateX(-50%);
   filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.5));
 }
+
 .card-poster img {
   width: 100%;
   margin: 0 auto;
@@ -338,6 +348,7 @@ section.inner {
   font-size: 32px;
   font-weight: 700;
 }
+
 .movie-card .card-rating {
   margin-top: 10px;
   font-size: 24px;
