슬라이드와 영화카드의 좋아요 숫자 동기화
동기화했읍니다....

--- a/css/detail.css
+++ b/css/detail.css
@@ -3,6 +3,8 @@
   font-family: "sofia-pro", sans-serif;
   font-weight: 400;
   color: white;
+  word-wrap: break-word;
+  word-break: keep-all;
 }
 
 button {
@@ -346,6 +348,10 @@ section.similar {
 .movie-card .card-poster {
   border-radius: 10px;
   overflow: hidden;
+}
+
+.movie-card .card-star {
+  margin-top: 10px;
 }
 
 .card-poster img {
