change search button css

--- a/css/index.css
+++ b/css/index.css
@@ -367,6 +367,12 @@ section.inner {
   margin-right: 15px;
 }
 
-search-delete-btn {
-  color: black;
+.search-delete-btn {
+  background-color: transparent;
+  border: none;
+  font-size: 15px;
+}
+
+.search-delete-btn:hover {
+  cursor: pointer;
 }
