--- a/css/index.css
+++ b/css/index.css
@@ -269,12 +269,14 @@ section.inner {
   height: 80%;
   bottom: 0px;
   position: absolute;
-  background: linear-gradient(to bottom,
-      rgba(20, 20, 20, 0) 10%,
-      rgba(20, 20, 20, 0.25) 25%,
-      rgba(20, 20, 20, 0.5) 50%,
-      rgba(20, 20, 20, 0.75) 75%,
-      rgba(20, 20, 20, 1) 100%);
+  background: linear-gradient(
+    to bottom,
+    rgba(20, 20, 20, 0) 10%,
+    rgba(20, 20, 20, 0.25) 25%,
+    rgba(20, 20, 20, 0.5) 50%,
+    rgba(20, 20, 20, 0.75) 75%,
+    rgba(20, 20, 20, 1) 100%
+  );
   opacity: 0.8;
   display: none;
 }
@@ -365,7 +367,6 @@ section.inner {
   margin-right: 15px;
 }
 
-search-delete-btn {
+.search-delete-btn {
   background-color: transparent;
 }
-
