--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,10 @@
   color: white;
   word-wrap: break-word;
   word-break: keep-all;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 body {
@@ -17,18 +21,33 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  /* -webkit-text-stroke: 2px black; */
+  background-image: linear-gradient(0deg, black, #5a5a5a);
+  background-repeat: no-repeat;
 }
 
 .header .logo-box {
-  width: 270px;
+  /* width: 270px; */
   height: 80px;
-  background-color: royalblue;
+  /* background-color: royalblue; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  font-size: 100px;
+  font-weight: 700;
+}
+.header .logo-box .text {
+  /* color: black; */
+}
+
+.header .logo-box {
 }
 
 .top-text {
   text-align: center;
   font-weight: 700;
   font-size: 32px;
+  margin: 40px 0 50px 0;
 }
 
 /* 슬라이더 부분 */
@@ -38,6 +57,7 @@ body {
 
 #slider {
   /* height: 768px; */
+  width: 453px;
   margin: 0 auto;
   overflow: hidden;
 }
@@ -45,7 +65,7 @@ body {
 .slide-inner {
   display: flex;
   transition: 1s ease-in-out;
-  height: 100%;
+  /* height: 100%; */
   justify-content: center;
 }
 
@@ -59,7 +79,7 @@ body {
 
 .slide-num {
   margin: 0 auto;
-  padding: 30px;
+  /* padding: 30px; */
 }
 
 .slide-num .slide-img {
@@ -102,20 +122,40 @@ body {
 
 .slide-num .slide-info {
   text-align: center;
+  position: relative;
 }
 
 .slide-info .title {
   text-align: center;
-  margin-top: 34px;
+  margin-top: 20px;
   font-size: 32px;
   font-weight: 700;
 }
 
-.slide-info .rating {
-  margin: 10px auto 0;
-  font-size: 28px;
+.slide-info .rank {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: -630px;
+  left: 40px;
+  background-color: royalblue;
+  background: transparent;
+  /* border: 2px solid royalblue; */
+  width: 80px;
+  height: 80px;
+  border-radius: 40px;
+  position: absolute;
+  font-size: 80px;
+  font-weight: 700;
   color: white;
 }
+.rank .numb {
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.4));
+}
+/* .rank .top {
+  position: absolute;
+  background: transparent;
+  /* top: -px; */
 
 /* slide btn */
 
@@ -124,24 +164,34 @@ body {
 }
 
 .button-left {
+  width: 100px;
+  height: 100px;
   position: absolute;
-  padding: 50px;
+  /* padding: 50px; */
   color: white;
+  font-size: 30px;
+  line-height: 1;
+  background: transparent;
   border: 2px solid white;
   top: 350px;
-  left: 100px;
-  border-radius: 100px;
+  right: 80%;
+  border-radius: 100%;
+  z-index: 9;
 }
 
 .button-right {
+  width: 100px;
+  height: 100px;
   position: absolute;
-  padding: 50px;
+  /* padding: 50px; */
+  font-size: 30px;
   color: white;
   border: 2px solid white;
-
+  background: transparent;
   top: 350px;
-  right: 100px;
+  left: 80%;
   border-radius: 100px;
+  z-index: 9;
 }
 
 section.inner {
@@ -279,6 +329,37 @@ section.inner {
   );
   opacity: 0.8;
   display: none;
+}
+.like-btn-slide {
+  position: absolute;
+  text-align: center;
+  padding: 0 30px;
+  border-radius: 40px;
+  width: 200px;
+  height: 60px;
+  font-size: 24px;
+  background-color: white;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 105px;
+  cursor: pointer;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.like-btn-slide:hover {
+  transition: transform 0.1s linear;
+  transform: translateY(-5px) translateX(-50%);
+  filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.5));
+}
+
+.like-btn-slide p {
+  color: royalblue;
+}
+
+.like-btn-slide .like-num {
+  margin-left: 5px;
 }
 
 .like-btn {
