--- a/css/index.css
+++ b/css/index.css
@@ -29,6 +29,7 @@ body {
 .header .logo-box {
   /* width: 270px; */
   height: 80px;
+  margin-top: 20px;
   /* background-color: royalblue; */
   /* display: flex; */
   /* justify-content: center; */
