--- a/css/detail.css
+++ b/css/detail.css
@@ -5,6 +5,10 @@
   color: white;
   word-wrap: break-word;
   word-break: keep-all;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 button {
@@ -26,16 +30,30 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+  /* -webkit-text-stroke: 2px black; */
+  background-image: linear-gradient(0deg, black, #5a5a5a);
+  background-repeat: no-repeat;
 }
 
 .header .logo-box {
-  width: 270px;
+  /* width: 270px; */
+  margin-top: 20px;
   height: 80px;
-  background-color: royalblue;
+  /* background-color: royalblue; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  font-size: 100px;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.header .logo-box a {
+  text-decoration: none;
 }
 
 .movie-title {
-  margin: 0px auto 37px;
+  margin: 40px auto 40px;
   text-align: center;
   font-size: 80px;
   font-weight: 700;
